# Skell

./: .gitignore  LICENSE  Main.hs  Skell.cabal  default.nix  shell.nix
Skell/: Buffer.hs  Core.hs  Debug.hs  Keymap.hs  TextDisplay.hs  Types.hs
Skell/UI/: .Gtk.hs.swp  Gtk.hs
Skell/UI/Gtk/: Keys.hs
src/: Main.hs
src/Skell/: Buffer.hs  Core.hs  Keymap.hs  Types.hs
src/Skell/Frontend/: MsgPack.hs
src/Skell/UI/: GLFW.hs  MsgPack.hs
