name: Skell
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: eletodoguaysinc@gmail.com
description:
category: Development
author: Eleazar Díaz Delgado
data-dir: ""

executable Skell
    build-depends: base ==4.8.*,
                   process ==1.2.*,
                   stm -any,
                   mtl -any,
                   monad-logger == 0.3.13.*,
                   containers -any,
                   data-default -any,
                   msgpack -any,
                   pipes == 4.1.*,
                   pipes-concurrency == 2.0.*,
                   network == 2.6.*,
                   binary -any,
                   lens -any,
                   parsec -any,
                   text == 1.2.*,
                   bytestring -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -threaded
