name: Skell
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: eletodoguaysinc@gmail.com
description:
category: Development
author: Eleazar Díaz Delgado
data-dir: ""

executable Skell
    build-depends: base ==4.8.*,
                   process ==1.2.*,
                   mtl -any,
                   stm == 2.4.*,
                   monad-logger == 0.3.13.*,
                   containers -any,
                   data-default -any,
                   msgpack -any,
                   -- pandoc -any,
                   pandoc-types -any,
                   network == 2.6.*,
                   network-transport == 0.4.*,
                   network-transport-tcp == 0.4.*,
                   binary -any,
                   lens -any,
                   parsec -any,
                   bytestring -any,
                   text -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -threaded
